[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Temp/dungeon_sheet.png" type="Texture" id=1]
[ext_resource path="res://Stages/Interactables/Chest/Chest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=3]

[node name="Chest" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
region_enabled = true
region_rect = Rect2( 128, 112, 96, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 2 )

[node name="Open" type="AudioStreamPlayer2D" parent="."]

[node name="Trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
visible = false
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="Hint" type="Label" parent="."]
visible = false
margin_left = -30.952
margin_top = -15.0775
margin_right = 108.048
margin_bottom = -1.07748
rect_scale = Vector2( 0.5, 0.5 )
text = "PLEASE FIND THE KEY!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_Trigger_body_exited"]
